0.34
 - Remove obsolete test module dependency.

0.33 2015-03-28T17:49:47+01:00
 - Update Map::Tube to 2.97 version.
 - Update Map::Tube::Berlin to 0.09 version.
 - Update Map::Tube::CLI 0.06 version.
 - Update Map::Tube::London to 0.72 version.
 - Update Map::Tube::Plugin::Formatter to 0.07 version.
 - Update Map::Tube::Plugin::FuzzyFind 0.08 version.

0.32 2015-03-24T22:57:17+01:00
 - Add Map::Tube::CLI 0.02 version.
 - Update Map::Tube to 2.94 version.
 - Update Map::Tube::KoelnBonn to 0.09 version.
 - Update Map::Tube::Plugin::Formatter to 0.06 version.
 - Update Map::Tube::Plugin::FuzzyFind 0.07 version.

0.31 2015-03-23T13:14:16+01:00
 - Add Map::Tube::Plugin::Formatter 0.03 version.
 - Update Map::Tube to 2.93 version.
 - Update Map::Tube::London to 0.71 version.
 - Update Map::Tube::Vienna to 0.04 version.

0.30 2015-03-15T23:30:47+01:00
 - Update Map::Tube to 2.89 version.
 - Update Map::Tube::Berlin to 0.08 version.
 - Update Map::Tube::Dnipropetrovsk to 0.03 version.
 - Update Map::Tube::London to 0.70 version.
 - Update Map::Tube::Nanjing to 0.02 version.
 - Update Map::Tube::Prague to 0.10 version.
 - Update Map::Tube::Yekaterinburg to 0.03 version.
 - Update Map::Tube::Vienna to 0.03 version.
 - Update Map::Tube::Warsaw to 0.04 version.

0.29 2015-03-11T08:06:18+01:00
 - Update Map::Tube to 2.88 version.
 - Update Map::Tube::Glasgow to 0.07 version.
 - Update Map::Tube::KoelnBonn to 0.08 version.
 - Update Map::Tube::Lyon to 0.06 version.
 - Update Map::Tube::Moscow to 0.05 version.
 - Update Map::Tube::Plugin::FuzzyFind 0.05 version.
 - Update Map::Tube::Plugin::Graph to 0.18 version.
 - Update Map::Tube::Prague to 0.09 version.
 - Update Test::Map::Tube to 0.07 version.

0.28 2015-03-07T23:45:06+01:00
 - Update Map::Tube::Bucharest to 0.05 version.
 - Update Map::Tube::Budapest to 0.02 version.
 - Update Map::Tube::KoelnBonn to 0.07 version.

0.27 2015-03-02T07:50:30+01:00
 - Update Map::Tube::Barcelona to 0.20 version.