@@ -13,43 +13,15 @@ license 'artistic_2';
 name 'Task-Map-Tube';
 readme_from 'Tube.pm';
 requires 'Map::Tube' => 2.97;
-requires 'Map::Tube::Barcelona' => 0.20;
-requires 'Map::Tube::Beijing' => 0.01;
-requires 'Map::Tube::Berlin' => 0.09;
-requires 'Map::Tube::Bucharest' => 0.05;
-requires 'Map::Tube::Budapest' => 0.02;
 requires 'Map::Tube::CLI' => 0.06;
-requires 'Map::Tube::Delhi' => 0.33;
-requires 'Map::Tube::Dnipropetrovsk' => 0.03;
-requires 'Map::Tube::Glasgow' => 0.07;
 requires 'Map::Tube::Graph' => 0.04;
 requires 'Map::Tube::GraphViz' => 0.06;
-requires 'Map::Tube::Kazan' => 0.02;
-requires 'Map::Tube::Kharkiv' => 0.03;
-requires 'Map::Tube::Kiev' => 0.03;
-requires 'Map::Tube::KoelnBonn' => 0.09;
-requires 'Map::Tube::London' => 0.72;
-requires 'Map::Tube::Lyon' => 0.06;
-requires 'Map::Tube::Minsk' => 0.03;
-requires 'Map::Tube::Moscow' => 0.05;
-requires 'Map::Tube::NYC' => 0.22;
-requires 'Map::Tube::Nanjing' => 0.02;
-requires 'Map::Tube::Novosibirsk' => 0.01;
 requires 'Map::Tube::Plugin::Formatter' => 0.07;
 requires 'Map::Tube::Plugin::FuzzyFind' => 0.08;
 requires 'Map::Tube::Plugin::Graph' => 0.18;
-requires 'Map::Tube::Prague' => 0.10;
-requires 'Map::Tube::SaintPetersburg' => 0.03;
-requires 'Map::Tube::Samara' => 0.01;
-requires 'Map::Tube::Singapore' => 0.01;
-requires 'Map::Tube::Sofia' => 0.05;
-requires 'Map::Tube::Tbilisi' => 0.02;
 requires 'Map::Tube::Text::Shortest' => 0.01;
 requires 'Map::Tube::Text::Table' => 0.04;
-requires 'Map::Tube::Tokyo' => 0.18;
-requires 'Map::Tube::Vienna' => 0.04;
-requires 'Map::Tube::Warsaw' => 0.04;
-requires 'Map::Tube::Yekaterinburg' => 0.03;
+requires 'Task::Map::Tube::Metro' => 0.01;
 requires 'Test::Map::Tube' => 0.07;
 requires 'perl' => '5.6.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
