@@ -7,21 +7,12 @@ SYNOPSIS
 SEE ALSO
     Task::MapMetro::Maps.
 
+    Task::Map::Tube::Metro.
+
     Map::Tube, Map::Tube::CLI, Map::Tube::Graph, Map::Tube::GraphViz,
     Map::Tube::Plugin::Formatter, Map::Tube::Plugin::FuzzyFind,
     Map::Tube::Plugin::Graph, Map::Tube::Text::Shortest,
     Map::Tube::Text::Table, Test::Map::Tube,
-
-    Map::Tube::Barcelona, Map::Tube::Beijing, Map::Tube::Berlin,
-    Map::Tube::Bucharest, Map::Tube::Budapest, Map::Tube::Delhi,
-    Map::Tube::Dnipropetrovsk, Map::Tube::Glasgow, Map::Tube::Kazan,
-    Map::Tube::Kharkiv, Map::Tube::Kiev, Map::Tube::KoelnBonn,
-    Map::Tube::London, Map::Tube::Lyon, Map::Tube::Minsk, Map::Tube::Moscow,
-    Map::Tube::NYC, Map::Tube::Nanjing, Map::Tube::Novosibirsk,
-    Map::Tube::Prague, Map::Tube::SaintPetersburg, Map::Tube::Samara,
-    Map::Tube::Singapore, Map::Tube::Sofia, Map::Tube::Tbilisi,
-    Map::Tube::Tokyo, Map::Tube::Vienna, Map::Tube::Warsaw,
-    Map::Tube::Yekaterinburg.
 
 REPOSITORY
     <https://github.com/tupinek/Task-Map-Tube>
